Added several ListAdapters and Activitys - Improved Locale translation - Added DownloadImage class to download images - Added Linearlayout and layout files - Added Robot fonts i.e. thin, light, medium - Added functionality to use BulletSpan class to show bullets in the array - Data is parsed using GSON library

--- a/akarshseggemuresume/app/src/main/AndroidManifest.xml
+++ b/akarshseggemuresume/app/src/main/AndroidManifest.xml
@@ -35,6 +35,19 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+        <activity android:name=".ContactActivity" />
+        <activity android:name=".InfoActivity" />
+        <activity android:name=".SummaryActivity" />
+        <activity android:name=".ProfilesActivity" />
+        <activity android:name=".SkillsActivity" />
+        <activity android:name=".LanguagesActivity" />
+        <activity android:name=".EducationActivity" />
+        <activity android:name=".ExperienceActivity" />
+        <activity android:name=".VolunteerActivity" />
+        <activity android:name=".AwardsActivity" />
+        <activity android:name=".PublicationsActivity" />
+        <activity android:name=".InterestsActivity" />
+        <activity android:name=".ReferencesActivity"></activity>
     </application>
 
 </manifest>
