--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,9 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-#    - sys-img-x86-android-26
-#    - sys-img-armeabi-v7a-android-17
-    - $ANDROID_TARGET
-    - sys-img-armeabi-v7a-$ANDROID_TARGET
+    - sys-img-x86-android-26
+    - sys-img-armeabi-v7a-android-17
+
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
@@ -42,18 +41,7 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 
-env:
-  matrix:
-  - ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
-
-# Emulator Management: Create, Start and Wait
-before_script:
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
-
-script: ./gradlew build connectedCheck
+script: ./gradlew build
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
