--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ android:
   - extra-android-support
   - extra-google-m2repository
   - extra-android-m2repository
-
   # Specify at least one system image,
   # if you need to run emulator(s) during your tests
   - sys-img-x86-android-26
@@ -38,7 +37,11 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 
-script: ./gradlew build
+before_script:
+- yes | sdkmanager --licenses
+
+script:
+- ./gradlew build
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
