--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ android:
   - tools
   - platform-tools
   # The BuildTools version used by your project
-  - build-tools-28.0.0
+  - build-tools-28.0.3
   # The SDK version used to compile your project
   - android-28
   # Additional components
@@ -37,8 +37,8 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 
-before_script:
-- yes | sdkmanager --licenses
+before_install:
+- yes | sdkmanager "build-tools;28.0.3"
 
 script:
 - ./gradlew build
