Added Java Code Coverage library
- updated travis-ci yml file to get JaCoCo report.
- updated gradle file to include testCoverageEnabled true

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ before_install:
 
 script:
 - ./gradlew build
+- ./gradlew connectedCheck
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
