--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ android:
   - build-tools-28.0.3
   # The SDK version used to compile your project
   - android-28
+  - add-on
   # Additional components
   - extra-google-google_play_services
   - extra-android-support
@@ -40,9 +41,15 @@ cache:
 before_install:
 - yes | sdkmanager "build-tools;28.0.3"
 
+# Emulator Management: Create, Start and Wait
+before_script:
+- echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+- emulator -avd test -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
+
 script:
-- ./gradlew build
-- ./gradlew connectedCheck
+- ./gradlew build connectedCheck
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
