--- a/.travis.yml
+++ b/.travis.yml
@@ -41,15 +41,13 @@ cache:
 before_install:
 - yes | sdkmanager "build-tools;28.0.3"
 
-# Emulator Management: Create, Start and Wait
-before_script:
-- echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
-- emulator -avd test -no-audio -no-window &
+script:
+- ./gradlew build check
+- echo no | android create avd --force -n test -t android-26 --abi google_apis/armeabi-v7a
+- emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb shell input keyevent 82 &
-
-script:
-- ./gradlew build connectedCheck
+- ./gradlew connectedCheck
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
