Added lint options abort on error to be false
- Rearranged travis yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ android:
   - build-tools-28.0.3
   # The SDK version used to compile your project
   - android-28
+  - android-22
   - add-on
   # Additional components
   - extra-google-google_play_services
@@ -20,8 +21,7 @@ android:
   - extra-android-m2repository
   # Specify at least one system image,
   # if you need to run emulator(s) during your tests
-  - sys-img-x86-android-26
-  - sys-img-armeabi-v7a-android-17
+  - sys-img-armeabi-v7a-android-22
 
   licenses:
   - 'android-sdk-preview-license-52d11cd2'
@@ -41,13 +41,16 @@ cache:
 before_install:
 - yes | sdkmanager "build-tools;28.0.3"
 
-script:
-- ./gradlew build check
-- echo no | android create avd --force -n test -t android-26 --abi google_apis/armeabi-v7a
-- emulator -avd test -no-skin -no-audio -no-window &
+before_script:
+- echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+- emulator -avd test -no-audio -no-window &
 - android-wait-for-emulator
+- sleep 180
+- adb devices
 - adb shell input keyevent 82 &
-- ./gradlew connectedCheck
+
+script:
+- ./gradlew build checkstyle connectedCheck -PdisablePreDex
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
