--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ before_script:
 - adb shell input keyevent 82 &
 
 script:
-- ./gradlew build checkstyle connectedCheck -PdisablePreDex
+- ./gradlew build connectedCheck
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
