Update Gradle version to 7.4.2 and adjust lint options in build.gradle; fix JSON URLs in MainActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,6 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    lintOptions {
-        abortOnError false
-    }
     buildTypes {
         debug {
             testCoverageEnabled true
@@ -21,6 +18,9 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lint {
+        abortOnError false
     }
 }
 
