Update Gradle and Android SDK setup in CI workflow; adjust properties for build features

--- a/.github/workflows/instrumentation-tests-on-push.yml
+++ b/.github/workflows/instrumentation-tests-on-push.yml
@@ -26,7 +26,10 @@ jobs:
 
       - name: Build project
         run: ./gradlew build
-      
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Start Android emulator
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
