--- a/.github/workflows/instrumentation-tests-on-push.yml
+++ b/.github/workflows/instrumentation-tests-on-push.yml
@@ -25,7 +25,7 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Build project
-        run: ./gradlew build
+        run: ./gradlew build --warning-mode all
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
@@ -40,7 +40,7 @@ jobs:
           emulator-options: -no-window -no-audio
 
       - name: Run instrumentation tests
-        run: ./gradlew connectedCheck
+        run: ./gradlew connectedCheck --warning-mode all
 
       - name: Upload coverage to Codecov
         if: success()
