Update Android SDK version to 29 and add command line tools distribution in CI workflow

--- a/.github/workflows/instrumentation-tests-on-push.yml
+++ b/.github/workflows/instrumentation-tests-on-push.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
+        with:
+          distribution: commandlinetools
 
       - name: Start Android emulator
         uses: ReactiveCircus/android-emulator-runner@v2
