Refactor GitHub Actions workflow to specify JDK distribution and remove Android SDK distribution setting

--- a/.github/workflows/instrumentation-tests-on-push.yml
+++ b/.github/workflows/instrumentation-tests-on-push.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
+          distribution: 'temurin'
 
       - name: Cache Gradle dependencies
         uses: actions/cache@v3
@@ -29,8 +30,6 @@ jobs:
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
-        with:
-          distribution: commandlinetools
 
       - name: Start Android emulator
         uses: ReactiveCircus/android-emulator-runner@v2
