--- a/.github/workflows/instrumentation-tests-on-push.yml
+++ b/.github/workflows/instrumentation-tests-on-push.yml
@@ -26,13 +26,24 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Cache Gradle dependencies
+      - name: AVD cache
         uses: actions/cache@v4
+        id: avd-cache
         with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-30
+
+      - name: create AVD and generate snapshot for caching
+        if: steps.avd-cache.outputs.cache-hit != 'true'
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          force-avd-creation: false
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: false
+          script: echo "Generated AVD snapshot for caching."
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
@@ -43,22 +54,16 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Start Android emulator
-        uses: ReactiveCircus/android-emulator-runner@v2
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 30
-          target: google_apis
-          arch: x86_64
-          profile: pixel_3
-          emulator-options: -no-window -no-audio
-
-      - name: Run instrumentation tests
-        run: ./gradlew connectedCheck --warning-mode all
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: true
+          script: ./gradlew connectedCheck
 
       - name: Upload coverage to Codecov
         if: success()
         run: bash <(curl -s https://codecov.io/bash)
-      
-      - name: Shutdown emulator
-        if: always()
-        run: adb -s emulator-5554 emu kill || true
+
