--- a/.github/workflows/instrumentation-tests-on-push.yml
+++ b/.github/workflows/instrumentation-tests-on-push.yml
@@ -1,5 +1,5 @@
 name: instrumentation-tests-on-push
-run-name: Instrumentation Tests on push 
+run-name: Instrumentation Tests on Push
 
 on: push
 
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Enable KVM
@@ -17,16 +17,16 @@ jobs:
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
-      - name: Set up JDK 17
+      - name: Set Up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: temurin
 
-      - name: Setup Gradle
+      - name: Set Up Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: AVD cache
+      - name: Cache Android Virtual Device (AVD)
         uses: actions/cache@v4
         id: avd-cache
         with:
@@ -35,7 +35,7 @@ jobs:
             ~/.android/adb*
           key: avd-29
 
-      - name: create AVD and generate snapshot for caching
+      - name: Create AVD and Generate Snapshot for Caching
         if: steps.avd-cache.outputs.cache-hit != 'true'
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -45,16 +45,16 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching."
 
-      - name: Make gradlew executable
+      - name: Make Gradle Wrapper Executable
         run: chmod +x ./gradlew
 
-      - name: Build project
+      - name: Build Project
         run: ./gradlew build --warning-mode all
 
-      - name: Set up Android SDK
+      - name: Set Up Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: run tests
+      - name: Run Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
@@ -63,7 +63,6 @@ jobs:
           disable-animations: true
           script: ./gradlew connectedCheck
 
-      - name: Upload coverage to Codecov
+      - name: Upload Coverage to Codecov
         if: success()
         run: bash <(curl -s https://codecov.io/bash)
-
