Update CI workflow to set up Android SDK and improve build command

--- a/.github/workflows/instrumentation-tests-on-push.yml
+++ b/.github/workflows/instrumentation-tests-on-push.yml
@@ -23,6 +23,9 @@ jobs:
           java-version: '17'
           distribution: temurin
 
+      - name: Set Up Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Set Up Gradle
         uses: gradle/actions/setup-gradle@v4
 
@@ -49,10 +52,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build Project
-        run: ./gradlew build --warning-mode all
-
-      - name: Set Up Android SDK
-        uses: android-actions/setup-android@v3
+        run: ./gradlew build --parallel --daemon --warning-mode all
 
       - name: Run Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
