Fix coverage upload step in CI workflow to use Codecov action

--- a/.github/workflows/instrumentation-tests-on-push.yml
+++ b/.github/workflows/instrumentation-tests-on-push.yml
@@ -63,6 +63,8 @@ jobs:
           disable-animations: true
           script: ./gradlew connectedCheck
 
-      - name: Upload Coverage to Codecov
+      - name: Upload Coverage report to Codecov
         if: success()
-        run: bash <(curl -s https://codecov.io/bash)
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
