--- a/.github/workflows/instrumentation-tests-on-push.yml
+++ b/.github/workflows/instrumentation-tests-on-push.yml
@@ -7,6 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    strategy:
+      matrix:
+        api-level: [21, 23, 29]
 
     steps:
       - name: Checkout Repository
@@ -24,14 +27,6 @@ jobs:
           java-version: '17'
           distribution: temurin
 
-      - name: Set Up Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Update Android SDK Command-line Tools
-        run: |
-          yes | sdkmanager --update
-          yes | sdkmanager --install "cmdline-tools;latest"
-
       - name: Set Up Gradle
         uses: gradle/actions/setup-gradle@v4
 
@@ -42,13 +37,13 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-29
+          key: avd-${{ matrix.api-level }}
 
       - name: Create AVD and Generate Snapshot for Caching
         if: steps.avd-cache.outputs.cache-hit != 'true'
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
+          api-level: ${{ matrix.api-level }}
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
@@ -63,7 +58,7 @@ jobs:
       - name: Run Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
+          api-level: ${{ matrix.api-level }}
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
