--- a/codecov.yml
+++ b/codecov.yml
@@ -1,26 +1,31 @@
 codecov:
-  notify:
-    require_ci_to_pass: yes
-
+  notify: {}
+  require_ci_to_pass: true
+comment:
+  behavior: default
+  layout: header, diff
+  require_base: false
+  require_changes: false
+  require_head: true
+  show_branch: true
 coverage:
   precision: 2
+  range:
+    - 70.0
+    - 100.0
   round: down
-  range: "70...100"
-
   status:
-    project: yes
-    patch: yes
-    changes: no
-
+    changes: false
+    patch:
+      default: {}
+    project:
+      default: {}
 parsers:
   gcov:
     branch_detection:
-      conditional: yes
-      loop: yes
-      method: no
-      macro: no
-
-comment:
-  layout: "header, diff"
-  behavior: default
-  require_changes: no
+      conditional: true
+      loop: true
+      macro: false
+      method: false
+  javascript:
+    enable_partials: false
