Update Codecov configuration to enforce CI pass requirement and adjust flags for instrumentation tests

--- a/codecov.yml
+++ b/codecov.yml
@@ -7,7 +7,6 @@ comment:
   require_base: false
   require_changes: false
   require_head: true
-  show_branch: true
 coverage:
   precision: 2
   range:
@@ -20,6 +19,12 @@ coverage:
       default: {}
     project:
       default: {}
+flag_management:
+  default_rules:
+    carryforward: false
+  individual_flags:
+    - name: android-instrumentation
+      carryforward: true
 parsers:
   gcov:
     branch_detection:
